<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="about_version_txt">v1.0 @ 2014/11</string>
    <string name="app_name">Ahorcado ES-EN</string>
    <string name="ahorcado">Ahorcado</string>
    <string name="action_settings">Settings</string>
    <string name="btn_new_game_text">Nueva partida</string>
    <string name="btn_statistics_text">Resultados</string>
    <string name="btn_settings_text">Opciones</string>
    <string name="btn_about_text">Acerca de</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_resultados">ResultadosActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_opciones">OpcionesActivity</string>
    <string name="title_activity_acerca_de">AcercaDeActivity</string>
    <string name="about_description_txt">Ahorcado español-inglés es un juego del ahorcado en el que,
        a partir de una palabra en español, se tiene que averiguar su traducción al inglés. \n
        Cuenta con tres niveles de dificultad con vocabulario relativo a los niveles PET, FCE y CAE de Cambridge (o B1, B2 y C1 del MCER).</string>
    <string name="about_developers_txt"></string>
    <string name="about_github_url">https://github.com/MakingAppsES/Ahorcado</string>
    <string name="about_antorof_url">https://github.com/antorof</string>
    <string name="about_carranza_url">https://github.com/Carranza</string>
    <string name="about_github_txt">- Proyecto en GitHub -</string>
    <string name="about_antorof_txt">- antorof -</string>
    <string name="about_carranza_txt">- Carranza -</string>
    <string name="title_dialog_difficulty">Dificultad</string>
    <string name="btn_b1_text">P.E.T. - B1</string>
    <string name="btn_b2excl_text">F.C.E. - B2</string>
    <string name="btn_c1excl_text">C.A.E. - C1</string>
    <string name="es_en">Español - Inglés</string>

</resources>
