<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/square_paper_background"
    android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:text="@string/title_dialog_difficulty"
        android:textSize="26sp"/>

    <Button
        android:id="@+id/btn_b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/main_button_green"
        android:text="@string/btn_b1_text"/>

    <Button
        android:id="@+id/btn_b2_excl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/main_button_yellow"
        android:text="@string/btn_b2excl_text"/>

    <!--<Button-->
        <!--android:id="@+id/btn_b2_acum"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:background="@drawable/main_button_yellow"-->
        <!--android:text="FIRST acumulativo"/>-->

    <Button
        android:id="@+id/btn_c1_excl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/main_button_red"
        android:textColor="@android:color/white"
        android:text="@string/btn_c1excl_text"/>

    <!--<Button-->
        <!--android:id="@+id/btn_c1_acum"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:background="@drawable/main_button_red"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:text="ADVANCED acum."/>-->

</LinearLayout>